Updated dependencies and fixed property 'useLocalFiles'

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.kotlin
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/linux,macos,gradle,kotlin,windows,intellij,intellij+all,intellij+iml,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=linux,macos,gradle,kotlin,windows,intellij,intellij+all,intellij+iml,visualstudiocode
 
