--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,10 @@ commons-text = "1.14.0"
 commons-lang3 = "3.20.0"
 logback-classic = "1.5.21"
 kover = "0.9.3"
+jetbrains-compose = "1.9.1"
+jetbrains-compose-runtime-desktop = "1.9.1"
+jetbrains-compose-material3-desktop = "1.9.0"
+jetbrains-compose-material-icons-extended-desktop = "1.7.3"
 
 [libraries]
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
@@ -39,10 +43,15 @@ modb-test = { module = "io.github.manamiproject:modb-test", version.ref = "modb-
 commons-text = { module = "org.apache.commons:commons-text", version.ref = "commons-text" }
 commons-lang3 = { module = "org.apache.commons:commons-lang3", version.ref = "commons-lang3" }
 logback-classic = { module = "ch.qos.logback:logback-classic", version.ref = "logback-classic" }
+jetbrains-compose-runtime-desktop = { module = "org.jetbrains.compose.runtime:runtime-desktop", version.ref = "jetbrains-compose-runtime-desktop" }
+jetbrains-compose-material3-desktop = { module = "org.jetbrains.compose.material3:material3-desktop", version.ref = "jetbrains-compose-material3-desktop" }
+jetbrains-compose-material-icons-extended-desktop = { module = "org.jetbrains.compose.material:material-icons-extended-desktop", version.ref = "jetbrains-compose-material-icons-extended-desktop" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
+jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "jetbrains-compose" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 
 [bundles]
 kotlin = [
