--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,6 +26,7 @@ jobs:
   build:
     needs: tests
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: windows-latest
@@ -71,18 +72,15 @@ jobs:
         java-version: 21
     - name: Set executable flag on gradlew
       run: chmod +x gradlew
-    - name: Extract release version
-      run: echo "RELEASE_VERSION=${{ github.event.release.tag_name }}" >> $GITHUB_ENV
-    - name: Set version
-      run: echo $RELEASE_VERSION > manami-app/src/main/resources/manami.version
     - name: Build artifact
       env:
         GH_PACKAGES_READ_TOKEN: ${{ secrets.PACKAGES_READ_TOKEN }}
-      run: ./gradlew compileKotlin ${{ matrix.gradleTask }} -Pmanami.release.version=$RELEASE_VERSION -Pmanami.build.os=${{ matrix.osCleanName }} -Pmanami.build.arch=${{ matrix.osCleanName }}
+      run: ./gradlew compileKotlin ${{ matrix.gradleTask }} -Pmanami.release.version=${{ github.event.release.tag_name }} -Pmanami.build.os=${{ matrix.osCleanName }} -Pmanami.build.arch=${{ matrix.arch }}
+      shell: bash
     - name: Upload file to release
       uses: softprops/action-gh-release@v2
       with:
-        files: manami-gui/build/**/*.${{ matrix.ext }}
+        files: manami-compose-ui/build/**/*.${{ matrix.ext }}
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - id: fetch-latest-release
@@ -90,6 +88,7 @@ jobs:
       run: |
         version=$(git tag --sort=creatordate | tail -2 | head -1)
         echo "PREVIOUS_VERSION=$version" >> $GITHUB_OUTPUT
+      shell: bash
     - name: Delete outdated release assets
       uses: mknejp/delete-release-assets@v1
       with:
